my-app/src/assets/style.scss
.App {
  height: 100vh;
  background: whitesmoke;
  .App-header {
    background-color: #282c34;
    display: flex;
    flex-direction: row;
    padding: 15px;
    align-items: center;
    justify-content: space-between;
    color: white;
    div {
      margin: 0 25px;
      padding: 10px;
    }
    div:hover {
      border-radius: 8px;
      background-color: dimgray;
      cursor: pointer;
    }
    .Header-left {
      display: flex;
      flex-direction: row;
      align-items: center;
    }
  }
  .App-search {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;
    padding: 5px 45px;
    .search {
      flex-basis: 100%;
      flex-grow: 1;
      color: white;
      width: 100%;
      padding: 10px 0;
    }
    .search-text {
      font-size: 25px;
      padding: 10px 0;
    }
  }
  .App-recommendations {
    width: 100%;
    .recommendations-text {
      text-align: center;
      font-size: 25px;
      color: cadetblue;
    }
    .recommendations {
      border-radius: 10px;
      min-height: 250px;
      margin: 10px 25px;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-around;
      .movie-card {
        display: flex;
        justify-content: center;
        position: relative;
        border-radius: 10px;
        height: 325px;
        background-color: #3c424d;
        margin: 5px;
        padding: 10px;
        .movie-card-img {
          height: 100%;
          border-radius: 10px;
        }
        .movie-card-details {
          position: absolute;
          height: 100%;
          width: 100%;
          top: 0;
          left: 0;
          display: none;
          border-radius: 10px;
          .movie-card-details-title {
            font-weight: bold;
            color: white;
            padding: 15px;
          }
          .movie-card-details-desc {
            color: white;
            padding: 15px;
            margin-bottom: 15px;
            max-height: 25ch;
            text-overflow: ellipsis;
          }
        }
      }
      .movie-card:hover {
        cursor: pointer;
        .movie-card-details{
          background-color: rgb(0, 0, 0, 0.5);
          display: inline-block;
        }
        .movie-card-img{

        }
      }
    }
    .recommendations-loading {
      width: 100%;
      margin: 25px;
    }
  }
}


.Header-left > * {
  padding: 10px;
}

.App-header-div {
  color: white;
}

